tests/snapshots/transactions/details/not_exists_with_groups.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - details
    - 482784abee65d18a09f457b8125f045580c12bfc462318b3f98337a8c77d2c66
    - "--from-group"
    - "1"
    - "--to-group"
    - "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Transaction 482784abee65d18a09f457b8125f045580c12bfc462318b3f98337a8c77d2c66 not found
